Fix alignment issue + Add links to topbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@
 .topbar > * {
     max-height: 20px;
     align-items: center;
+    padding-top: 8px;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 .logo {
@@ -28,8 +31,25 @@
     gap: 2em;
 }
 
+a, a:visited, a:hover, a:active {
+    text-decoration: none;
+}
+
+.main > * {
+    display: flex;
+    padding: 2em;
+}
+
+.main-text {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    flex-grow: 1;
+
+}
+
 .main-image img {
-    width: 400px;    
+    height: 230px; 
 }
 
 .logo,
@@ -40,23 +60,29 @@
 
 .main-text h1 {
     font-size: 48px;
-    font-weight: bolder; 
+    font-weight: bolder;
+    text-shadow: 0 0 10px; 
 }
 
 .secondary-text {
     margin-top: -30px;
 }
 
+.button {
+    margin-top: -10px;
+}
 .sign-up {
     background-color: #3882F6;
     font-weight: bold;
     border-radius: 5px;
+    padding: 4px;
     padding-left: 8px;
     padding-right: 8px;
     border: none;
+
 }
 
-.links,
+.links a,
 .secondary-text {
     color: #E5E7EB;
     font-size: 18px;
